# norfair-rs

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml
examples/: compare_norfair_py_rs.py
python/norfair_rs/: _norfair_rs.pyi
python/tests/: test_compatibility.py  test_tracker.py
src/: detection.rs  tracked_object.rs  tracker.rs
src/distances/: dispatch.rs
src/python/: detection.rs  distances.rs  tracked_object.rs  tracker.rs
