[package]
name = "norfair-rs"
version = "0.4.1"
edition = "2021"
rust-version = "1.70"
description = "Object tracking library - Rust port of Python norfair"
license = "BSD-3-Clause"
repository = "https://github.com/nmichlo/norfair-rs"
keywords = ["tracking", "object-tracking", "kalman-filter", "computer-vision"]
categories = ["computer-vision", "science"]

[lib]
name = "norfair_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
opencv = ["dep:opencv"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
# Numerical computing - using nalgebra for pure Rust, no BLAS required
nalgebra = "0.34"

# Stack-allocated small vectors for hot paths
smallvec = "1.13"

# Error handling
thiserror = "2.0"

# INI file parsing (for MOTChallenge seqinfo.ini)
configparser = "3.0"

# Optional: OpenCV bindings for video I/O and drawing
opencv = { version = "0.97", optional = true }

# Optional: Python bindings
pyo3 = { version = "0.27", optional = true, features = ["extension-module", "abi3-py312"] }
numpy = { version = "0.27", optional = true }

[dev-dependencies]
# Testing
approx = "0.5"
criterion = "0.8"
proptest = "1.0"
tempfile = "3.0"

# Benchmarking
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "benchmark_rust"
path = "examples/benchmark/benchmark_rust.rs"

[[bench]]
name = "tracker_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
